Updated the bio, was missing a word.

--- a/index.qmd
+++ b/index.qmd
@@ -4,7 +4,7 @@ title: About Elissa
 
 Hello everyone, my name is Elissa!
 
-I am curious graduate student at [Baruch College](https://www.baruch.cuny.edu/) with a passion for problem solving and tackling challenges through new experiences. I'm currently pursuing a Master of Science in Business Analytics with a concentration in Data Analytics in the [Zicklin School of Business](https://zicklin.baruch.cuny.edu/).
+I am a curious graduate student at [Baruch College](https://www.baruch.cuny.edu/) with a passion for problem solving and tackling challenges through new experiences. I'm currently pursuing a Master of Science in Business Analytics with a concentration in Data Analytics in the [Zicklin School of Business](https://zicklin.baruch.cuny.edu/).
 
 I am also a recent graduate of Baruch College from the Baruch Scholars Honors program where I obtained a Bachelor of Arts in Mathematics and minored in Communication Studies.
 
