--- a/mp01.qmd
+++ b/mp01.qmd
@@ -798,4 +798,4 @@ Lastly, `{r} highest_fares_per_VRM_mode` from `{r} highest_fares_per_VRM_agency`
 
 ## Conclusion
 
-Transit system efficiency is subjective and can be measured with different metrics (highest UPT, highest farebox recovery, lowest expenses per UPT, highest total fares per UPT, lowest expenses per VRM, and highest total fares per VRM). Based on the above information, using the farebox recovery ratio, I found that the most efficient transit system in the country in 2022 was the \*\*`{r} highest_farebox_recovery_mode`\*\* from the \*\*`{r} highest_farebox_recovery_agency`\*\*. This transit system was able to maximize its total fares while minimizing their expenses leading to the highest farebox recovery ratio.
+Transit system efficiency is subjective and can be measured with different metrics (highest UPT, highest farebox recovery, lowest expenses per UPT, highest total fares per UPT, lowest expenses per VRM, and highest total fares per VRM). Based on the above information, using the farebox recovery ratio, I found that the most efficient transit system in the country in 2022 was the `{r} highest_farebox_recovery_mode` from the `{r} highest_farebox_recovery_agency`. This transit system was able to maximize its total fares while minimizing their expenses leading to the highest farebox recovery ratio.
