--- a/mp01.qmd
+++ b/mp01.qmd
@@ -6,7 +6,7 @@ editor: visual
 
 ## Introduction
 
-For this project, the goal is to explore different characteristics of the major transit systems in the United States, based on data from the [National Transit Database](https://www.transit.dot.gov/ntd). More specifically, the analysis includes data from the [2022 Fare Revenue](https://www.transit.dot.gov/ntd/data-product/2022-annual-database-fare-revenues) table, the most recent [Monthly Ridership](https://www.transit.dot.gov/ntd/data-product/monthly-module-adjusted-data-release) table, and the [2022 Operating Expenses](https://www.transit.dot.gov/ntd/data-product/2022-operating-expenses) reports. By analyzing various statistics like the total amount of trips, total vehicle miles traveled, total revenues and expenses by source, I hope to answer various questions and determine the most efficient transit system in the United States.
+The major United States public transit systems contribute significantly to individuals daily transportation, allowing commuters alternative and often more affordable transit options for commutes. The goal of this project is to explore different characteristics of the major transit systems in the United States, based on data from the [National Transit Database](https://www.transit.dot.gov/ntd). More specifically, the analysis includes data from the [2022 Fare Revenue](https://www.transit.dot.gov/ntd/data-product/2022-annual-database-fare-revenues) table, the most recent [Monthly Ridership](https://www.transit.dot.gov/ntd/data-product/monthly-module-adjusted-data-release) table, and the [2022 Operating Expenses](https://www.transit.dot.gov/ntd/data-product/2022-operating-expenses) reports. This report intends to consider various statistics including farebox recovery, ridership, total trips, total vehicle miles traveled, total revenues and expenses for various locations and transit agencies, to analyze the performance of these transit systems over time. Ultimately, the analysis of certain metrics will assist in determining the most efficient transit system in the United States.
 
 ## Data Cleaning
 
